# async-py

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
homework/tasks/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py
homework/tests/: conftest.py  test_task_1.py  test_task_2.py  test_task_3.py  test_task_4.py  test_task_5.py  test_task_6.py  test_task_7.py
