[tool.poetry]
name = "aaa-async-homework"
version = "0.1.0"
description = ""
authors = ["Vladimir Olokhtonov <volokhtonov@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
numpy = "^1.26.1"
pytest-asyncio = "^0.21.1"
pytest = "^7.4.3"
hypothesis = "^6.89.0"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"